--- a/main/index.html
+++ b/main/index.html
@@ -7,107 +7,207 @@
   <script>document.getElementsByTagName("html")[0].className += " js";</script>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/brainstorm.css">
-  <title>Creative Agency Calgary</title>
+
+  <!--Fonts-->
+  <script src="https://kit.fontawesome.com/24364b4ff2.js" crossorigin="anonymous"></script>
+  <title>Digital Agency Calgary</title>
 </head>
 
 <body>
-  <main>
-    <section>
-      <header class="f-header js-f-header position-relative">
-        <div class="f-header__mobile-content container max-width-lg">
-          <a href="#0" class="f-header__logo">
-            <svg width="104" height="30" viewBox="0 0 104 30">
-              <title>Go to homepage</title>
-              <path
-                d="M37.54 24.08V3.72h4.92v16.37h8.47v4zM60.47 24.37a7.82 7.82 0 01-5.73-2.25 8.36 8.36 0 01-2-5.62 8.32 8.32 0 012.08-5.71 8 8 0 015.64-2.18 8.07 8.07 0 015.68 2.2 8.49 8.49 0 012 5.69 8.63 8.63 0 01-1.78 5.38 7.6 7.6 0 01-5.89 2.49zm0-3.67c2.42 0 2.73-3 2.73-4.23s-.31-4.26-2.73-4.26-2.79 3-2.79 4.26.32 4.23 2.82 4.23zM95.49 24.37a7.82 7.82 0 01-5.73-2.25 8.36 8.36 0 01-2-5.62 8.32 8.32 0 012.08-5.71 8.4 8.4 0 0111.31 0 8.43 8.43 0 012 5.69 8.6 8.6 0 01-1.77 5.38 7.6 7.6 0 01-5.89 2.51zm0-3.67c2.42 0 2.73-3 2.73-4.23s-.31-4.26-2.73-4.26-2.8 3-2.8 4.26.31 4.23 2.83 4.23zM77.66 30c-5.74 0-7-3.25-7.23-4.52l4.6-.26c.41.91 1.17 1.41 2.76 1.41a2.45 2.45 0 002.82-2.53v-2.68a7 7 0 01-1.7 1.75 6.12 6.12 0 01-5.85-.08c-2.41-1.37-3-4.25-3-6.66 0-.89.12-3.67 1.45-5.42a5.67 5.67 0 014.64-2.4c1.2 0 3 .25 4.46 2.82V8.81h4.85v15.33a5.2 5.2 0 01-2.12 4.32A9.92 9.92 0 0177.66 30zm.15-9.66c2.53 0 2.81-2.69 2.81-3.91s-.31-4-2.81-4-2.81 2.8-2.81 4 .27 3.91 2.81 3.91zM55.56 3.72h9.81v2.41h-9.81z"
-                fill="var(--color-contrast-higher)" />
-              <circle cx="15" cy="15" r="15" fill="var(--color-primary)" />
-            </svg>
-          </a>
+  <div class="off-canvas off-canvas--full-width off-canvas--navigation js-off-canvas js-off-canvas--nav">
+    <button class="reset anim-menu-btn offnav-control js-anim-menu-btn js-tab-focus" aria-label="Toggle navigation"
+      aria-controls="off-canvas-navigation">
+      <svg class="offnav-control__bg" aria-hidden="true" viewBox="0 0 48 48">
+        <circle cx="24" cy="24" r="22" stroke-miterlimit="10" />
+      </svg>
+      <i class="anim-menu-btn__icon anim-menu-btn__icon--arrow-right" aria-hidden="true"></i>
+    </button>
+    <!--MAIN CONTENT-->
+    <main class="off-canvas__main bg shadow-sm">
+      <section class="hero min-height-100vh flex items-center"
+        style="background-image: url('https://images.unsplash.com/photo-1508898578281-774ac4893c0c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80')">
+        <div class="container max-width-adaptive-xl">
+          <div class="text-center">
+            <div class="text-sm opacity-60% margin-bottom-xxs">Welcome</div>
 
-          <button class="reset anim-menu-btn js-anim-menu-btn f-header__nav-control js-tab-focus"
-            aria-label="Toggle menu">
-            <i class="anim-menu-btn__icon anim-menu-btn__icon--close" aria-hidden="true"></i>
-          </button>
-        </div>
-
-        <div class="f-header__nav" role="navigation">
-          <div class="f-header__nav-grid justify-between@md container max-width-lg">
-            <div class="f-header__nav-logo-wrapper flex-grow flex-basis-0">
-              <a href="#0" class="f-header__logo">
-                <svg width="104" height="30" viewBox="0 0 104 30">
-                  <title>Go to homepage</title>
-                  <path
-                    d="M37.54 24.08V3.72h4.92v16.37h8.47v4zM60.47 24.37a7.82 7.82 0 01-5.73-2.25 8.36 8.36 0 01-2-5.62 8.32 8.32 0 012.08-5.71 8 8 0 015.64-2.18 8.07 8.07 0 015.68 2.2 8.49 8.49 0 012 5.69 8.63 8.63 0 01-1.78 5.38 7.6 7.6 0 01-5.89 2.49zm0-3.67c2.42 0 2.73-3 2.73-4.23s-.31-4.26-2.73-4.26-2.79 3-2.79 4.26.32 4.23 2.82 4.23zM95.49 24.37a7.82 7.82 0 01-5.73-2.25 8.36 8.36 0 01-2-5.62 8.32 8.32 0 012.08-5.71 8.4 8.4 0 0111.31 0 8.43 8.43 0 012 5.69 8.6 8.6 0 01-1.77 5.38 7.6 7.6 0 01-5.89 2.51zm0-3.67c2.42 0 2.73-3 2.73-4.23s-.31-4.26-2.73-4.26-2.8 3-2.8 4.26.31 4.23 2.83 4.23zM77.66 30c-5.74 0-7-3.25-7.23-4.52l4.6-.26c.41.91 1.17 1.41 2.76 1.41a2.45 2.45 0 002.82-2.53v-2.68a7 7 0 01-1.7 1.75 6.12 6.12 0 01-5.85-.08c-2.41-1.37-3-4.25-3-6.66 0-.89.12-3.67 1.45-5.42a5.67 5.67 0 014.64-2.4c1.2 0 3 .25 4.46 2.82V8.81h4.85v15.33a5.2 5.2 0 01-2.12 4.32A9.92 9.92 0 0177.66 30zm.15-9.66c2.53 0 2.81-2.69 2.81-3.91s-.31-4-2.81-4-2.81 2.8-2.81 4 .27 3.91 2.81 3.91zM55.56 3.72h9.81v2.41h-9.81z"
-                    fill="var(--color-contrast-higher)" />
-                  <circle cx="15" cy="15" r="15" fill="var(--color-primary)" />
-                </svg>
-              </a>
-            </div>
-
-            <ul class="f-header__list flex-grow flex-basis-0 justify-center@md">
-              <li class="f-header__item"><a href="#0" class="f-header__link">About</a></li>
-              <li class="f-header__item"><a href="#0" class="f-header__link">
-                  <span>Solutions</span>
-                  <svg class="f-header__dropdown-icon icon" aria-hidden="true" viewBox="0 0 12 12">
-                    <path
-                      d="M9.943,4.269A.5.5,0,0,0,9.5,4h-7a.5.5,0,0,0-.41.787l3.5,5a.5.5,0,0,0,.82,0l3.5-5A.5.5,0,0,0,9.943,4.269Z" />
-                  </svg>
-                </a>
-
-                <ul class="f-header__dropdown">
-                  <li><a href="#0" class="f-header__dropdown-link">Sub Nav Item One</a></li>
-                  <li><a href="#0" class="f-header__dropdown-link">Sub Nav Item Two</a></li>
-                  <li><a href="#0" class="f-header__dropdown-link">Sub Nav Item Three</a></li>
-                  <li><a href="#0" class="f-header__dropdown-link">Sub Nav Item Four</a></li>
-                  <li><a href="#0" class="f-header__dropdown-link">Sub Nav Item Five</a></li>
-                </ul>
-              </li>
-              <li class="f-header__item"><a href="#0" class="f-header__link" aria-current="page">Resources</a></li>
-              <li class="f-header__item"><a href="#0" class="f-header__link">Pricing</a></li>
-              <li class="f-header__item"><a href="#0" class="f-header__link">Contact</a></li>
-            </ul>
-
-            <ul class="f-header__list flex-grow flex-basis-0 justify-end@md">
-              <li class="f-header__item"><a href="#0" class="f-header__link">Login</a></li>
-              <li class="f-header__item"><a href="#0" class="f-header__btn btn btn--primary">Button</a></li>
-            </ul>
-          </div>
-        </div>
-      </header>
-
-      <section class="feature-v4 margin-top-md">
-        <div class="container max-width-adaptive-lg">
-          <div class="feature-v4__grid grid gap-md items-center">
-            <div class="col-5@md position-relative z-index-1">
-              <div class="text-sm color-contrast-medium margin-bottom-xxs">This is a Label</div>
-
-              <div class="text-component">
-                <h1 class="text-xxxl feature-v4__text-offset@md">Lorem ipsum dolor sit, amet consectetur adipisicing
-                  elit.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, rem neque doloribus impedit explicabo
-                  minus laborum cupiditate atque esse consectetur.</p>
-              </div>
-
-              <div class="margin-top-sm">
-                <div class="flex flex-wrap gap-sm items-center">
-                  <a href="#0" class="btn btn--primary">Download</a>
-                  <a href="#0" class="color-inherit">Learn more</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-7@md">
-              <figure>
-                <img class="block width-100%" src="../../../app/assets/img/feature-v4-img-1.jpg"
-                  alt="Image description">
-              </figure>
+            <div class="text-component margin-bottom-sm">
+              <h1>Brainstorm Digital</h1>
+              <h3 class="text-md text-anim text-anim--clip js-text-anim">
+                We <span class="text-anim__wrapper js-text-anim__wrapper"><i
+                    class="text-anim__word text-anim__word--in js-text-anim__word">design</i><i
+                    class="text-anim__word js-text-anim__word">develop</i><i
+                    class="text-anim__word js-text-anim__word">create</i></span> digital experiences
+              </h3>
             </div>
           </div>
         </div>
       </section>
-    </section>
-  </main>
+
+      <!--STICKY HERO-->
+      <section class="margin-bottom-xl section">
+        <div class="container max-width-lg">
+          <section class="position-relative z-index-1 padding-y-xl">
+            <div class="container max-width-adaptive-lg">
+              <div class="grid gap-lg items-center">
+                <div class="col-5@md">
+                  <div class="text-component">
+                    <p class="text-sm color-contrast-medium">How it works</p>
+                    <h1>Lorem ipsum</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, rem neque doloribus impedit
+                      explicabo.</p>
+                  </div>
+
+                  <div class="margin-top-sm">
+                    <div class="flex flex-wrap gap-sm items-center">
+                      <a href="#0" class="btn btn--primary">Download</a>
+                      <a href="#0" class="color-inherit">Learn more</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-7@md">
+
+                  <div
+                    class="tilted-slideshow position-relative padding-top-md width-80% margin-x-auto width-70%@sm padding-top-0@md js-tilted-slideshow">
+                    <p class="sr-only">Tilted Image Slideshow</p>
+
+                    <ul class="tilted-slideshow__list position-relative perspective-xs js-tilted-slideshow__list">
+                      <li class="tilted-slideshow__item tilted-slideshow__item--top js-tilted-slideshow__item">
+                        <img src="../../../app/assets/img/tilted-slideshow-img-1.jpg" alt="Image Description">
+                      </li>
+
+                      <li class="tilted-slideshow__item tilted-slideshow__item--middle js-tilted-slideshow__item">
+                        <img src="../../../app/assets/img/tilted-slideshow-img-2.jpg" alt="Image Description">
+                      </li>
+
+                      <li class="tilted-slideshow__item tilted-slideshow__item--bottom js-tilted-slideshow__item">
+                        <img src="../../../app/assets/img/tilted-slideshow-img-3.jpg" alt="Image Description">
+                      </li>
+                    </ul>
+
+                    <span class="tilted-slideshow__touch-hint" aria-hidden="true">Tap to change image</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </section>
+
+      <section class="sticky-hero margin-bottom-xl js-sticky-hero">
+        <div class="sticky-hero__media"
+          style="background-image:url(https://images.unsplash.com/photo-1636716014665-a38c9b33e0c7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1689&q=80)"
+          aria-hidden="true"></div>
+
+        <div class="sticky-hero__content">
+          <div class="container max-width-sm text-component">
+            <h1 class="sticky-title-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, ut. Facilis
+              placeat iste qui
+              voluptatum.</h1>
+          </div>
+        </div>
+      </section>
+
+      <section class="margin-bottom-xl">
+        <div class="container max-width-sm">
+          <article class="article text-component">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum odit ea aliquid reiciendis eum quo
+              eligendi sapiente molestiae recusandae autem dolore cupiditate dicta enim illo, dolorem accusamus
+              doloremque! Facere, nisi quam dolorum quo. Laborum, nam maiores ad sapiente quo ipsam obcaecati,
+              consectetur alias nostrum omnis quasi repellat dolore soluta quod laboriosam error. Consequuntur nam
+              assumenda quam eius, obcaecati culpa asperiores! Earum eos numquam laudantium amet aut possimus laborum
+              vero dolores inventore quis laboriosam, maxime quam commodi, illo praesentium voluptates mollitia corporis
+              dolorem nemo, suscipit. Nemo laborum eveniet in nam quidem minus deleniti ab, adipisci beatae. Recusandae
+              amet possimus praesentium repellat consequatur ea pariatur reiciendis inventore officiis assumenda nobis
+              voluptate, enim tempore tempora esse ex vero animi beatae cum, velit eaque. Cumque omnis nesciunt non.
+              Cum, expedita quibusdam odit ut aspernatur perspiciatis ratione voluptates quaerat, nam consequatur vero
+              minima ipsam omnis? Impedit esse accusantium natus veritatis doloremque aspernatur deleniti odit vel quo,
+              sint expedita dolores, odio explicabo atque minima enim reiciendis, voluptatibus ad iste voluptas sapiente
+              provident, optio nam eligendi consequatur! Repudiandae, quibusdam, et aspernatur perspiciatis nihil maxime
+              aliquid eveniet sint totam sapiente voluptate, officiis ut distinctio, eius tempora fuga repellat modi
+              dolorum.</p>
+          </article>
+        </div>
+      </section>
+
+      <section class="sticky-hero js-sticky-hero margin-bottom-xl">
+        <div class="sticky-hero__media" aria-hidden="true">
+          <div class="sticky-hero__video">
+            <video autoplay loop muted src="assets/img/video/pexels-mart-production-7565985.mp4"></video>
+          </div>
+        </div>
+
+        <div class="sticky-hero__content">
+          <div class="container max-width-sm text-component">
+            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, ut. Facilis placeat iste qui
+              voluptatum. Repellat porro, cumque magni tempore?</h1>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container max-width-sm">
+          <article class="article text-component">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum odit ea aliquid reiciendis eum quo
+              eligendi sapiente molestiae recusandae autem dolore cupiditate dicta enim illo, dolorem accusamus
+              doloremque! Facere, nisi quam dolorum quo. Laborum, nam maiores ad sapiente quo ipsam obcaecati,
+              consectetur alias nostrum omnis quasi repellat dolore soluta quod laboriosam error. Consequuntur nam
+              assumenda quam eius, obcaecati culpa asperiores! Earum eos numquam laudantium amet aut possimus laborum
+              vero dolores inventore quis laboriosam, maxime quam commodi, illo praesentium voluptates mollitia corporis
+              dolorem nemo, suscipit. Nemo laborum eveniet in nam quidem minus deleniti ab, adipisci beatae. Recusandae
+              amet possimus praesentium repellat consequatur ea pariatur reiciendis inventore officiis assumenda nobis
+              voluptate, enim tempore tempora esse ex vero animi beatae cum, velit eaque. Cumque omnis nesciunt non.
+              Cum, expedita quibusdam odit ut aspernatur perspiciatis ratione voluptates quaerat, nam consequatur vero
+              minima ipsam omnis? Impedit esse accusantium natus veritatis doloremque aspernatur deleniti odit vel quo,
+              sint expedita dolores, odio explicabo atque minima enim reiciendis, voluptatibus ad iste voluptas sapiente
+              provident, optio nam eligendi consequatur! Repudiandae, quibusdam, et aspernatur perspiciatis nihil maxime
+              aliquid eveniet sint totam sapiente voluptate, officiis ut distinctio, eius tempora fuga repellat modi
+              dolorum.</p>
+          </article>
+        </div>
+      </section>
+
+
+
+    </main>
+
+
+    <!--NAV-->
+    <div id="off-canvas-navigation" class="off-canvas__panel js-off-canvas__panel" role="complementary">
+      <div class="off-canvas__content">
+        <div class="container max-width-sm padding-y-lg padding-bottom-0@md">
+          <div class="offnav height-100% flex flex-column text-center text-left@md">
+            <nav class="margin-bottom-lg" role="navigation" aria-label="Main">
+              <ul class="grid gap-sm">
+                <li> <i class="fak fa-brainstorm fa-5x"></i></li>
+                <li><a class="offnav__link text-xxl" href="#0">About</a></li>
+                <li><a class="offnav__link text-xxl" href="#0">Our Services</a></li>
+                <li><a class="offnav__link text-xxl" href="#0">Portfolio</a></li>
+                <li><a class="offnav__link text-xxl" href="#0">Blog</a></li>
+                <li><a class="offnav__link text-xxl" href="#0">Contact</a></li>
+              </ul>
+            </nav>
+
+            <nav class="offnav__subnav margin-top-auto@md padding-y-xs@md" role="navigation" aria-label="Secondary">
+              <ul class="flex flex-column gap-sm flex-row@md text-xs@md">
+                <li class="margin-right-auto@md">&copy;Copyright</li>
+                <li><a href="#0" class="color-contrast-higher">Twitter</a></li>
+                <li><a href="#0" class="color-contrast-higher">Facebook</a></li>
+                <li><a href="#0" class="color-contrast-higher">Instagram</a></li>
+              </ul>
+            </nav>
+
+            <button class="reset offnav__a11y-close-btn js-off-canvas__close-btn js-off-canvas__a11y-close-btn">Close
+              Navigation 👉</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
   <script src="assets/js/scripts.js"></script>
 </body>
 
